cleanup and sharedBuffer exe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,5 @@
 
 cmake_minimum_required(VERSION 3.10)
-cmake_policy(SET CMP0167 NEW)
-
 project(SharedRingBuffer)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -14,7 +12,7 @@ message(STATUS "Configured SharedRingBuffer as a header-only library.")
 option(BUILD_RINGBUFFER_TOOLS "Build CLI tools (reader/writer/debug)" ON)
 
 if(BUILD_RINGBUFFER_TOOLS)
-    find_package(Boost REQUIRED COMPONENTS interprocess)
+    find_package(Boost REQUIRED)
 
     # === CLI tools ===
     add_executable(circular_reader_test src/circular_reader_test.cpp)
